k8s/test-interactive-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-interactive-jupyter
  namespace: slurm
spec:
  securityContext:
    runAsUser: 1001
    fsGroup: 1001
  containers:
  - name: jupyter
    image: interactive-jupyter:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: storage
      mountPath: /mnt/storage
    - name: extrausers
      mountPath: /var/lib/extrausers
      subPath: common/etc
  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: slinky-storage-pvc
  - name: extrausers
    persistentVolumeClaim:
      claimName: slinky-storage-pvc
